<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/show_additional_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D3D3D3"
            android:text="@string/show_additional_fields"
            android:textColor="@color/black"
            android:layout_gravity="right">
        </Button>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:enabled="false"
            android:hint="@string/phone_number"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:useDefaultMargins="true">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D3D3D3"
                android:text="Save"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:gravity="center">
            </Button>


            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#D3D3D3"
                android:text="Cancel"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:gravity="center">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <EditText
                android:id="@+id/job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_title"/>

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"/>

            <EditText
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website"/>

            <EditText
                android:id="@+id/im"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/im"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>